# wireguard-rest

./: .gitignore  pyproject.toml
app/: main.py
app/api/: __init__.py  deps.py  user.py  wireguard.py
app/api/endpoints/: user.py  wireguard.py
app/models/: user.py
app/services/: user.py  wireguard.py
app/services/user/: __init__.py  base.py  damn.py  json.py
app/services/wireguard/: __init__.py  base.py  config.py  damn.py
app/settings/: logger.py  main.py  wireguard.py
app/utils/: system.py
